<resources>
    <string name="app_name">日历</string>
    <string name="number_picker_formatter">%02d</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="Year">年</string>
    <string name="Month">月</string>
    <string name="Date">日</string>
    <string name="Sure">确定</string>
    <string name="Cancel">取消</string>
    <string name="Chakanjinri">查看今日</string>
    <string name="Xuanzeriqi">选择日期</string>
    <string name="today">Today</string>
    <string name="txt_date">2018.10.1</string>
    <string name="txt_week">Tuesday</string>
    <string name="txt_day">1</string>
    <string name="txt_ganzhi">Wuxu Year</string>
    <string name="txt_shengxiao">Dog Year</string>
    <string name="txt_lunar">October 22nd</string>
</resources>
