<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

    <LinearLayout
        android:layout_width="460dp"
        android:layout_height="280dp"
        android:background="@drawable/background_dialog"
        android:gravity="center"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/content"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/number_picker_year"
            android:layout_width="155dip"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:textSize="28dp"
                android:text="@string/Year"/>


            <NumberPicker
                android:id="@+id/number_picker_month"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"/>

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textSize="28dp"
                android:gravity="center"
                android:text="@string/Month"/>

            <NumberPicker
                android:id="@+id/number_picker_day"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"/>

            <TextView
                android:layout_width="55dip"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:gravity="left"
                android:text="@string/Date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="55dip"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/dialog_bt_selector"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textSize="28dp"
                android:text="@string/Sure" />

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/dialog_bt_selector"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dp"
                android:textSize="28dp"
                android:gravity="center"
                android:text="@string/Cancel" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
