<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/ly_myinfo_changebirth"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="450px"
              android:background="@android:color/transparent"
              android:layout_gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_myinfo_changebirth_child"
        android:layout_width="700px"
        android:layout_height="450px"
        android:background="@drawable/background_dialog"
        android:gravity="center"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/content"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.okl.extencalendar.util.CycleWheelView
                android:background="@android:color/transparent"
                android:id="@+id/wv_birth_year"
                android:layout_width="212px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"/>

            <TextView
                android:layout_width="100px"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="28dp"
                android:text="@string/Year"/>

            <com.okl.extencalendar.util.CycleWheelView
                android:id="@+id/wv_birth_month"
                android:layout_width="110px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"/>

            <TextView
                android:layout_width="100px"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/Month"/>

            <com.okl.extencalendar.util.CycleWheelView
                android:id="@+id/wv_birth_day"
                android:layout_width="90px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"/>

            <TextView
                android:layout_width="90px"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:textColor="@color/white"
                android:gravity="left"
                android:text="@string/Date"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100px"

            android:padding="10px"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="335px"
                android:layout_height="80px"
                
                android:background="@drawable/dialog_bt_selector"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="28dp"
                android:text="@string/Sure" />

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="335px"
                android:layout_height="80px"
                android:layout_marginLeft="10px"
                android:background="@drawable/dialog_bt_selector"
                android:textColor="@color/white"
                android:textSize="28dp"
                android:gravity="center"
                android:text="@string/Cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>